--- a/index.html
+++ b/index.html
@@ -137,9 +137,10 @@ padding: 50px;
       <h3 class="display-6">Hi Travis!
       <br>
       <br>
-      Kris has invited you to join <i class="fas fa-dollar-sign"></i> earn</h3>
+      Kris has invited you to join
+      <br><i class="fas fa-dollar-sign"></i> earn</h3>
          <p>
-            <a href="/onboarding" class="btn btn-lg btn-success btn-circle" style= "padding: 20px; width: 250px;">Join now</a>
+            <a href="/onboarding" class="btn btn-lg btn-success btn-circle" style= "padding: 20px; width: 250px;">Accept invitation</a>
            
          </p>
       </div>
